modulo 2 do curso de html e css do bonieky

--- a/teste1.html
+++ b/teste1.html
@@ -15,17 +15,20 @@
 
 <body>
     <!--conteúdo exibido na tela do site-->
-    <h1 id="titulo">Título da Página</h1>
+    <h1 id="titulo">Página de Login</h1>
     <!--há pré-configurações em cada uma para diferenciação-->
     <h2>Subtítulo da página</h2>
     <!--influenciam para motores de busca-->
     <h3>Sub-sub-título da página</h3>
     <h6>Subtítulo da Página</h6>
-    <p class="texto">Era uma vez, blá blá blá</p>
+    <p>Era uma vez, blá blá blá</p>
+    <div>
+        
+    </div>
     <!--cria um parágrafo-->
     <!--por padrão o html não identifica quebra de linha, por isso é necessário saber as tags corretas-->
     <p>E aqui outra coisa, la la la</p>
-    <a class="texto" href="https://google.com.br">Google</a>
+    <a href="https://google.com.br">Google</a>
     <br />
     <!--quebra a linha-->
     <!--link ou âncora para outros sites, ao ser clicado-->
@@ -41,13 +44,7 @@
         <li>Manteiga</li>
         <li>Fermento</li>
     </ul>
-    <P>3 formas de inserção do CSS no HTML
-    <ul>
-        <li> CSS inline - na própria linha de código, com o atributo <i>"style"</i></li>
-        <li>CSS interno - tag <i>"style"</i> dentro da "<i>< head ></i>". Fica mais organizado.</li>
-        <li>CSS externo - arquivo externo ao html que é importado pra dentro do mesmo</li>
-    </ul>
-    </P>
+    
 </body>
 
 </html>
