modulo 3 do curso de html e css do bonieky

--- a/teste3.html
+++ b/teste3.html
@@ -1,36 +1,254 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br jp">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./estilo3.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Square+Peg&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Página de Teste</title>
   </head>
   <body>
+    <!--tanto a tag b quando a strong colocam o texto em negrito em termos visuais, dando destaque ao texto-->
+    <!--acontece também entre as tags i e em-->
+    <h1>Página de Teste</h1>
+    <b>negrito</b> mas sem semântica de importância.
+    <strong
+      >também é negrito mas o navegador dá a semântica de importância.</strong
+    >
+    é importante para acessibilidade de pessoas com necessidades especiais.
+    <br />
+
+    <i
+      ><a href="https://www.lipsum.com/">Lorem,</a> ipsum dolor sit amet
+      consectetur adipisicing elit.</i
+    >
+    Corrupti recusandae veritatis minus necessitatibus ipsa. Praesentium amet
+    sed atque ea provident natus, aut expedita,
+    <em>in commodi fugit quaerat, a nihil libero? </em>
+
+    <br />
+    <small> Outra frase de exemplo </small
+    ><!--se adapta à fonte padrão da pagina, usado para legenda de fotos, p.ex-->
+    <del>exemplo</del>
+    <!--item deletado, riscado-->
+    <mark>dá destaque como um marca texto</mark>
+    1<sup>o</sup> lugar C0<sub>2</sub>
+    <!--tags para subir ou descer parte dos texto-->
+
+    <h2>Formatando texto com CSS</h2>
     <p>
-      <!--tanto a tag b quando a strong colocam o texto em negrito em termos visuais, dando destaque ao texto-->
-      <!--acontece também entre as tags i e em-->
-
-      <b>negrito</b> mas sem semântica de importância.
-      <strong
-        >também é negrito mas o navegador dá a semântica de importância.</strong
-      >
-      é importante para acessibilidade de pessoas com necessidades especiais.
-      <br />
-
-      <i>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</i> Corrupti
-      recusandae veritatis minus necessitatibus ipsa. Praesentium amet sed atque
-      ea provident natus, aut expedita,
-      <em>in commodi fugit quaerat, a nihil libero?</em>
-      <br />
-      <small> Outra frase de exemplo </small
-      ><!--se adapta à fonte padrão da pagina, usado para legenda de fotos, p.ex-->
-      <del>exemplo</del>
-      <!--item deletado, riscado-->
-      <mark>dá destaque como um marca texto</mark>
-      1<sup>o</sup> lugar C0<sub>2</sub>
-      <!--tags para subir ou descer parte dos texto-->
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit aspernatur
+      modi minima earum, aut, doloremque culpa ut velit eum sed suscipit ea esse
+      eos consequuntur blanditiis ipsa id. Fugit, repudiandae! Lorem ipsum dolor
+      sit amet, consectetur adipiscing elit. Donec elementum libero vitae nunc
+      consectetur, at gravida ipsum suscipit. Nulla a ipsum a lacus dapibus
+      lobortis nec sed lorem. Praesent nisl diam, hendrerit ut nunc ut,
+      ullamcorper sollicitudin nibh. Vestibulum sed arcu eget tellus sagittis
+      rutrum. Vestibulum interdum sit amet massa eget fermentum. Vestibulum ut
+      sem quis nibh semper eleifend. Curabitur ac accumsan nisl. Suspendisse
+      semper ex arcu, at luctus leo rhoncus nec. Ut sed nunc eget mi congue
+      feugiat ac sed purus. Nulla non tempus nisi. Nulla ullamcorper et ligula
+      sit amet dignissim. Curabitur varius ornare nibh, in viverra magna
+      facilisis non. Vestibulum elementum, justo non pellentesque eleifend, arcu
+      enim sodales ipsum, sit amet dignissim velit sapien vitae est. Quisque
+      egestas id odio id consectetur. In hac habitasse platea dictumst.
+      Vestibulum a dictum dui, semper condimentum orci.
     </p>
+    <p class="texto">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus laudantium
+      modi beatae commodi. Culpa magnam voluptate labore sed nam fugit eius
+      nesciunt neque, soluta, maxime libero, distinctio est tempora! Natus!
+    </p>
+    <p class="texto">
+      月ぐだ転訃葉シヤ蔵提ねを投5図せゅラ行納店リルぞろ面接ルち関的ロ堀退ら載内公おぐ新伝ぞ芸月レこ条議チヘロオ五忠ん。64川スシモ紙構文サ最管動リオチユ市繊てみつっ唐問すか寄勝提みべがに政巻けあ企実39躍紛7仮きれだこ。弱環母ぽろは謙奏ワヒセチ禁毎モ豊込ヱ診歩せべじあ再踏うんー供漫くゅ鮮界ケセヲ暫力ニヱノ人検び連龍ミ低売ヘ国質ホ金8逮セ防抜爆年届はト。
+      分エシロメ女芸カリネル権対部れびス新客ぴゃのへ県台ラヤユコ時禁ネソ税著げょぞラ夏供コナヤタ読著ぞリけ運暮スムヨ模85済ゃ搭4砂てのひ。着ごぜ命問ノレトム関氷けル智速来ネスコヒ行九ト人徴際むぜかざ芸語びだね格断れ均芸オテ遺引クは米際ドみ力定エシユ入遅川千ぜ特常ヱイキ部孝波径げめぐぞ。円点ハサ通渡39安ニラナ化策か万19室づぐ禁紙来ッまぱ州真的そせ裁宅ねえラげ十8度オケ日見性素熊ら。
+    </p>
+    <table width="400px" border="1">
+      <thead>
+        <!--linha do cabeçalho da tabela-->
+        <th>Item 1</th>
+        <th>Item 2</th>
+        <th>Item 3</th>
+      </thead>
+      <tbody>
+        <!--linha do inicio do corpo da cabeça-->
+        <tr>
+          <td>..</td>
+          <td>..</td>
+          <td>..</td>
+        </tr>
+        <tr>
+          <td>..</td>
+          <td>..</td>
+          <td>..</td>
+        </tr>
+        <tr>
+          <td>..</td>
+          <td>..</td>
+          <td>..</td>
+        </tr>
+      </tbody>
+    </table>
+    <ol type="45">
+      <li>Leite</li>
+      <li>Chá</li>
+    </ol>
+
+    <ul style="list-style-type: square">
+      <li>Café</li>
+      <li>
+        Chá
+        <ul>
+          <li>Chá preto</li>
+          <li>Chá Verde</li>
+          <ul>
+            <li>Genmaicha</li>
+            <li>Matcha</li>
+            <li>Sencha</li>
+          </ul>
+          <li>Infusões</li>
+        </ul>
+      </li>
+      <li>Leite</li>
+    </ul>
+
+    <!--formulários pegam informações do usuário-->
+
+    <h2>Área de Cadastro</h2>
+    <form action="./teste1.html" method="get">
+      <!--tipos de input-->
+      <input type="text" name="usuario" value="Maria" />
+      <input type="password" name="senha" value="Maria" />
+      <input type="email" value="email" />
+      <br />
+      <input type="checkbox" />
+      <input type="radio" name="sexo" />
+      <input type="radio" name="sexo" />
+      <input type="radio" name="mes" />
+      <input type="radio" name="mes" />
+      <br />
+      <input type="submit" value="Manda!" />
+      <br />
+      <input type="color" />
+      <input type="date" />
+      <input type="datetime-local" />
+      <input type="month" />
+      <input type="time" />
+      <input type="week" />
+      <br />
+      <input type="number" value="Números" />
+      <input type="range" />
+      <input type="search" value="Pesquisa" />
+      <input type="tel" value="Telefone" />
+      <input type="url" value="URL" />
+    </form>
+    <h2>Área de Login</h2>
+    <form action="./teste1.html" method="GET">
+      <textarea name="descricao" rows="10" cols="40"></textarea>
+      <!--a visualização do tamanho irá depender de como o navegador renderiza a função-->
+      <br />
+      <select name="order">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option></select
+      ><br />
+      <select name="ordenacao" size="2" multiple>
+        <option>2</option>
+        <!--tem duas versões de valores que pode receber, o q o usuário vê ou o-->
+        <option value="last" selected>4</option>
+      </select>
+      <br />
+      <button>Texto do Botão</button>
+    </form>
+    <div class="auladecss">
+      <form>
+        <label
+          >Nome Completo:<br />
+          <input type="text" name="nome" />
+          <input type="submit" /> </label
+        ><br /><br /><br />
+        <input type="checkbox" id="teste" />
+        <label for="teste">Delcaro que li os termos de uso</label>
+      </form>
+
+      <form>
+        <label>
+          Descrição<br />
+          <textarea name="descricao"> </textarea>
+        </label>
+        <label>
+          <select>
+            Categoria
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+          </select>
+        </label>
+        <label>
+          <input type="checkbox" class="termoslink" /> Declaro que li e aceito
+          os <a>termos de uso.</a>
+          <button>Fazer Cadastro</button>
+        </label>
+      </form>
+    </div>
+
+    <form method="post" action="blablabla.php">
+      <input type="hidden" name="country" value="BR" />
+      <fieldset>
+        <!--conjunto de campos para agrupar elementos de mesma função-->
+        <legend>Dados Pessoais</legend>
+        <label>Nome</label>
+        <input type="text" name="name" required maxlength="8" />
+        <!--requied torna o campo obrigatório-->
+        <label>Sobrenome</label>
+
+        <input type="text" name="lasname" required minlength="2ch" />
+        <label>
+          foto
+          <input type="file" name="photo" accept="image/*" />
+          <!--accept filtra o tipo de arquivo que o usuário pode enviar-->
+        </label>
+        <label>
+          documento
+          <input type="file" name="document" accept="application/pdf" />
+        </label>
+        <label>Idade</label>
+
+        <input type="number" name="age" step="3" min="18" max="120" />
+        <!--step faz o valor pular de acordo com a quantidade especificado-->
+        <!--min e max funciona para números e datas-->
+        <label
+          >Data de Nascimento<br />
+          <input type="date" name="birthday" min="2020-05-18" />
+        </label>
+        <label
+          >email
+          <input
+            type="email"
+            pattern="name@xxx.com"
+            title="endereço de email"
+          />
+        </label>
+      </fieldset>
+      <fieldset>
+        <legend>Dados Profissionais</legend>
+        <label>Nome da empresa</label>
+        <input type="text" name="companyname" />
+
+        <label>Cargo na empresa</label>
+        <input type="text" name="jobposition" />
+      </fieldset>
+      <button>Cadastrar</button>
+    </form>
   </body>
 </html>
