--- a/semanticaEcssAvancado.html
+++ b/semanticaEcssAvancado.html
@@ -8,12 +8,11 @@
     <title>Página de Teste</title>
   </head>
   <body>
-    <!--o atributo data ajuda a fazer identificação de informação-->
-    <!--pode ser extendido com qualquer nome-->
-    <div data-nome="Maria" data-sobrenome="Vieira">
-      olá
-      <!--é um atributo/parâmetro q funciona com qualquer tag-->
-      <!--as informações do atributo data não aparecem na tela, mas podem ser usadas em conjunto com linguagens de programação que fazem comunicação com o computador, como o JavaScript-->
-    </div>
+    <video width="320" height="240" controls autoplay>
+      <!--cria um player de video num site-->
+      <!--indica que aqui começa um player de video-->
+      <source src="./video.mp4" type="videomp4" />
+      <source src="./video.ogg" type="videoogg" />
+    </video>
   </body>
 </html>
