--- a/semanticaEcssAvancado.html
+++ b/semanticaEcssAvancado.html
@@ -8,11 +8,10 @@
     <title>Página de Teste</title>
   </head>
   <body>
-    <video width="320" height="240" controls autoplay>
-      <!--cria um player de video num site-->
-      <!--indica que aqui começa um player de video-->
-      <source src="./video.mp4" type="videomp4" />
-      <source src="./video.ogg" type="videoogg" />
-    </video>
+    <audio controls autoplay loop muted preload>
+      <!--funciona de forma similar à tag video-->
+      <source src="./Mapa Natal - Krishna.m4a" type="audio/mpeg" />
+      <!--suporta mp3, ogg e wav-->
+    </audio>
   </body>
 </html>
