--- a/semanticaEcssAvancado.html
+++ b/semanticaEcssAvancado.html
@@ -8,10 +8,12 @@
     <title>Página de Teste</title>
   </head>
   <body>
-    <audio controls autoplay loop muted preload>
-      <!--funciona de forma similar à tag video-->
-      <source src="./Mapa Natal - Krishna.m4a" type="audio/mpeg" />
-      <!--suporta mp3, ogg e wav-->
-    </audio>
+    <form>
+      <input type="text" name="usuario" placeholder="Usuário" /><br /><br />
+      <!--o placeholder preve o que o campo faz, algo provisório no campo antes do input do usuário-->
+      <!--muito usado em sistemas de busca de sites-->
+      <input type="password" name="senha" placeholder="Senha" />
+      <input type="submit" value="Vai!" />
+    </form>
   </body>
 </html>
