--- a/semanticaEcssAvancado.html
+++ b/semanticaEcssAvancado.html
@@ -17,10 +17,13 @@
         size="10"
         autofocus
         required
+        autocomplete="off"
       /><br /><br />
       <!--o autofocus faz com que o cursor já apareca no input, pronto para o usuário digitar-->
       <!--o placeholder preve o que o campo faz, algo provisório no campo antes do input do usuário-->
       <!--muito usados em sistemas de busca de sites e páginas em que já se sabe o interesse do usuário ao entrar-->
+      <!--autocomplete é desligado em apps de bancos por exemplo. é um recurso natural do navegador-->
+      <!--o autocomplete do google é do próprio google, não o do navegador-->
       Senha<br />
       <input type="password" name="senha" placeholder="Senha" required />
       <!--size o tamanho se ajustar a quantidade de caracteres, mas não é muito utilizado-->
@@ -29,5 +32,8 @@
       <!--required input é quando o usuário é obrigado a adicionar o input para conseguir enviar o formulário-->
       <!--ajuda na validação dos dados-->
     </form>
+    <div id="teste">Olá</div>
+    <input type="text" />
+    <div class="exemplo">opa lele</div>
   </body>
 </html>
