--- a/semanticaEcssAvancado.html
+++ b/semanticaEcssAvancado.html
@@ -8,6 +8,9 @@
     <title>Página de Teste</title>
   </head>
   <body>
-    <div class="exemplo">opa lele</div>
+    <div class="exemplo">
+      opa lele
+      <a href="">Clica</a>
+    </div>
   </body>
 </html>
