webkit, wordwrap e meta tag

--- a/semanticaEcssAvancado.html
+++ b/semanticaEcssAvancado.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--para compatilhar links no facebook-->
+    <meta property="og:url" content="https://mariakrishna.dev/" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Titulo do artigo" />
+    <meta proprety="og:description" content="descrição do conteúdo" />
+    <meta proprety="og:image" content="url da image" />
+    <!--1200x630 é o padrão-->
     <link rel="stylesheet" href="style.css" />
     <title>Página de Teste</title>
   </head>
   <body>
     <div class="exemplo">
-      opa lele
-      <a href="">Clica</a>
+      <!--Webkit é um engine responsável por desenhar o html e css na tela. O IE
+      antes tinha um engine chamada Trident. Hoje é o EdgeHTML.
+      Cadaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa navegador tem o seu. Por isso há
+      pequenas diferenças de espaçamento, entre outros. Há um consenso mas cada
+      navegador interpreta as informações de forma diferente. Firefox = Gecko
+      Opera = Presto (antes), Webkit Safari = Webkit Chrome = Webkit (Blink)-->
+      Página de teste
     </div>
   </body>
 </html>
