tags main, adress e figure

--- a/semanticaEcssAvancado.html
+++ b/semanticaEcssAvancado.html
@@ -8,40 +8,39 @@
     <title>Document</title>
   </head>
   <body>
-    <!--codigos que ajudam na acessibidlidade e ajudam mecanismos de buscas-->
-    <dl>
-      <!--description list - para fazer listas-->
-      <dt>
-        <!--titulo-->
-        Café
-      </dt>
-      <dd>
-        <!--descrição do item-->
-        bebida quente de cor escura e sabor amargo
-      </dd>
-      <dt>Leite</dt>
-      <dd>
-        bebida proveniente de mamíferos fêmaeas que deram cria, na função de
-        alimentá-los.
-      </dd>
+    <header>
+      <nav></nav>
+    </header>
+    <div class="container">
+      <aside></aside>
+      <main>
+        <section>
+          <!--a tag main é usada para definir o conteúdo principal da pagina-->
+          <!--deve vir antes da section, sem englobar footer, header, etc.-->
+          <!--é o conteúdo único daquela pagina-->
+          <!--a main não pode ser descendente do nav, footer, header, aside, mas da section p.ex. pode-->
 
-      <!--Citações-->
-      <p>
-        Hange Zoe<br />
-        <q
-          ><!--automaticamente gera aspas e pode ter os estilos alterados via css, como todos os outros elementos-->
-          Dane-se seu complexo de inferioridade. Não fuja da realidade. Mesmo em
-          momentos de profundo desespero, acho que ainda podemos encontrar
-          esperança, não é? Um dia ou outro, todas as pessoas de quem você gosta
-          morrem.
-        </q>
-        <blockquote cite="https://www.pensador.com/melhores_frases_de_shingeki_no_kyojin_attack_on_titan/">
-          A única coisa que podemos fazer é acreditar que não vamos nos arrepender da escolha que fizemos. Acho que a dor é a melhor forma de obter disciplina. Não se esqueça de fazer o seu melhor para permanecer vivo. Portanto, escolha você mesmo, seja qual for a decisão da qual menos se arrependerá.
-          <br>
-          Levi Ackerman
-        </blockquote><!--cria uma quebra visual. o cite adiciona a fonte da citação-->
-      </p>
-    </dl>
-    
+          BLABALAKOJDIHJSIADHJIAJFIOSJAIFASIF
+          <figure>
+            <!--usada para colocar imagens e normalmente é usada quando fazemos postagens em blogs, na área de imagens da postagem-->
+            <img
+              src="https://i.picsum.photos/id/866/200/300.jpg?hmac=rcadCENKh4rD6MAp6V_ma-AyWv641M4iiOpe1RyFHeI"
+            />
+            <figcaption>
+              Foto Bonita
+              <!--tag que designa a legenda da imagem-->
+            </figcaption>
+          </figure>
+          IAJDIJDOIJAOSJFOIAHJFIOAJ
+        </section>
+      </main>
+    </div>
+    <footer>
+      <address>
+        <!--Adress diz pros motores de busca as informações de contatos da pagina. email, telefone, endereço-->
+        <!--normalmente localizada dentro do footer-->
+        <!--dependendo do navegador pode ser renderizada em itálico, mas pode ser corrigido no css-->
+      </address>
+    </footer>
   </body>
 </html>
