--- a/flexbox.html
+++ b/flexbox.html
@@ -14,13 +14,31 @@
         margin: 10px;
       }
 
-      .container2 {
-        display: flex;
-        background-color: #000;
-        flex-direction: row-reverse;
+      .div1 {
+        flex: 1; /*dispões os itens separando o espaço igualmente entre os elemento, usando todo o espaço disponível, independente da margin*/
+        background-color: #ff0000;
+        margin: 10px;
+        padding: 10px;
+        font-size: 20px;
       }
-      .container div,
-      .container2 div {
+
+      .div2 {
+        flex: 3; /*tamanhos 3x do 1*/
+        background-color: #ff0000;
+        margin: 10px;
+        padding: 10px;
+        font-size: 20px;
+      }
+      .div3 {
+        flex: 2; /*é o dobro do tamanho dos itens do grupo 1*/
+        background-color: #ff0000;
+        margin: 10px;
+        padding: 10px;
+        font-size: 20px;
+      }
+
+      .div4 {
+        flex: 4; /*calcula automaticamente os espaços que cada item ocupa*/
         background-color: #ff0000;
         margin: 10px;
         padding: 10px;
@@ -30,14 +48,10 @@
   </head>
   <body>
     <div class="container">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-    </div>
-    <div class="container2">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
+      <div class="div1">1</div>
+      <div class="div2">2</div>
+      <div class="div3">3</div>
+      <div class="div4">4</div>
     </div>
   </body>
 </html>
