banner feature started

--- a/medicenter/index.html
+++ b/medicenter/index.html
@@ -12,8 +12,20 @@
         <div class="logo">
           <a href="./index.html"><img src="./assets/images/logo.png" /></a>
         </div>
-        <div class="menu">...</div>
+        <div class="menu">
+          <nav>
+            <ul>
+              <li><a class="active" href="">Home</a></li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Home</a></li>
+              <li><a href="">Home</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </header>
+    <section id="banner"></section>
   </body>
 </html>
