--- a/medicenter/index.html
+++ b/medicenter/index.html
@@ -17,8 +17,8 @@
             <ul>
               <li><a class="active" href="">Home</a></li>
               <li><a href="">Home</a></li>
-              <li><a href="">Home</a></li>
-              <li><a href="">Home</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">Depoiments</a></li>
               <li><a href="">Home</a></li>
               <li><a href="">Home</a></li>
             </ul>
@@ -26,6 +26,40 @@
         </div>
       </div>
     </header>
-    <section id="banner"></section>
+    <section id="banner">
+      <div class="container column">
+        <div class="banner_headline">
+          <h1>Top notch experience</h1>
+          <h2>
+            Medicenter is responsive templete perfect for all screen sizes
+          </h2>
+        </div>
+        <div class="banner_options">
+          <div class="banner1">
+            <div class="banner_title">Emergency Casae</div>
+            <div class="banner_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            </div>
+            <a href="">Read More +</button></a>
+          </div>
+          <div class="banner2">
+            <div class="banner_title">Doctor Timetable</div>
+            <div class="banner_desc">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <a href="">Read More +</a>
+          </div>
+          <div class="banner3">
+            <div class="banner_title">Opening Hours</div>
+            <div class="banner_desc">
+                <div class="banner_weekdays">
+                            Monday - Friday <div class='banner_hours'> 8:00 - 17:00</div>
+                           </div>
+                        <div class="banner_weekdays">
+                            Saturday <div class='banner_hours'>8:00 - 17:00</div></div>
+                        <div class="banner_weekdays">
+                        Sunday <div class='banner_hours'>9:00 - 15:00</div>
+      </div>
+    </section>
   </body>
 </html>
